// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Errorpopover component tests snapshot testing with error object 1`] = `
<ErrorPopover
  onRetryClick={[MockFunction]}
  onSkipClick={[MockFunction]}
  processInstanceData={
    Object {
      "addons": Array [
        "jobs-management",
        "prometheus-monitoring",
        "process-management",
      ],
      "businessKey": "T1234",
      "childProcessInstances": Array [],
      "end": "2019-10-22T05:40:44.089Z",
      "endpoint": "http://localhost:4000",
      "error": Object {
        "message": "Something went wrong",
        "nodeDefinitionId": "_2140F05A-364F-40B3-BB7B-B12927065DF8",
      },
      "id": "e4448857-fa0c-403b-ad69-f0a353458b9d",
      "lastUpdate": "2019-10-22T03:40:44.089Z",
      "nodes": Array [
        Object {
          "definitionId": "EndEvent_1",
          "enter": "2019-10-22T03:37:38.586Z",
          "exit": "2019-10-22T03:37:38.586Z",
          "id": "870bdda0-be04-4e59-bb0b-f9b665eaacc9",
          "name": "End Event 1",
          "nodeId": "1",
          "type": "EndNode",
        },
        Object {
          "definitionId": "UserTask_2",
          "enter": "2019-10-22T03:37:30.807Z",
          "exit": "2019-10-22T03:37:38.586Z",
          "id": "6b4a4fe9-4aab-4e8c-bb79-27b8b6b88d1f",
          "name": "Confirm travel",
          "nodeId": "2",
          "type": "HumanTaskNode",
        },
        Object {
          "definitionId": "CallActivity_1",
          "enter": "2019-10-22T03:37:30.793Z",
          "exit": "2019-10-22T03:37:30.803Z",
          "id": "dd33de7c-c39c-484a-83a8-3e1b007fce95",
          "name": "Book Hotel",
          "nodeId": "3",
          "type": "SubProcessNode",
        },
        Object {
          "definitionId": "_2140F05A-364F-40B3-BB7B-B12927065DF8",
          "enter": "2019-10-22T03:37:30.806Z",
          "exit": "2019-10-22T03:37:30.807Z",
          "id": "08c153e8-2766-4675-81f7-29943efdf411",
          "name": "Join",
          "nodeId": "4",
          "type": "Join",
        },
        Object {
          "definitionId": "CallActivity_2",
          "enter": "2019-10-22T03:37:30.803Z",
          "exit": "2019-10-22T03:37:30.806Z",
          "id": "683cf307-f082-4a8e-9c85-d5a11b13903a",
          "name": "Book Flight",
          "nodeId": "4",
          "type": "SubProcessNode",
        },
        Object {
          "definitionId": "ParallelGateway_1",
          "enter": "2019-10-22T03:37:30.792Z",
          "exit": "2019-10-22T03:37:30.803Z",
          "id": "cf057e58-4113-46c0-be13-6de42ea8377e",
          "name": "Book",
          "nodeId": "5",
          "type": "Split",
        },
        Object {
          "definitionId": "ExclusiveGateway_2",
          "enter": "2019-10-22T03:37:30.792Z",
          "exit": "2019-10-22T03:37:30.792Z",
          "id": "415a52c0-dc1f-4a93-9238-862dc8072262",
          "name": "Join",
          "nodeId": "6",
          "type": "Join",
        },
        Object {
          "definitionId": "ExclusiveGateway_1",
          "enter": "2019-10-22T03:37:30.79Z",
          "exit": "2019-10-22T03:37:30.792Z",
          "id": "52d64298-3f28-4aba-a812-dba4077c9665",
          "name": "is visa required",
          "nodeId": "7",
          "type": "Split",
        },
        Object {
          "definitionId": "BusinessRuleTask_1",
          "enter": "2019-10-22T03:37:30.755Z",
          "exit": "2019-10-22T03:37:30.79Z",
          "id": "6fdee287-08f6-49c2-af2d-2d125ba76ab7",
          "name": "Visa check",
          "nodeId": "8",
          "type": "RuleSetNode",
        },
        Object {
          "definitionId": "StartEvent_1",
          "enter": "2019-10-22T03:37:30.753Z",
          "exit": "2019-10-22T03:37:30.754Z",
          "id": "d98c1762-9d3c-4228-9ffc-bc3f423079c0",
          "name": "StartProcess",
          "nodeId": "9",
          "type": "StartNode",
        },
      ],
      "parentProcessInstance": null,
      "parentProcessInstanceId": null,
      "processId": "travels",
      "processName": "travels",
      "roles": Array [],
      "rootProcessInstanceId": null,
      "serviceUrl": "http://localhost:4000",
      "start": "2019-10-22T03:40:44.089Z",
      "state": "ERROR",
      "variables": "{\\"flight\\":{\\"arrival\\":\\"2019-10-30T22:00:00Z[UTC]\\",\\"departure\\":\\"2019-10-22T22:00:00Z[UTC]\\",\\"flightNumber\\":\\"MX555\\"},\\"trip\\":{\\"begin\\":\\"2019-10-22T22:00:00Z[UTC]\\",\\"city\\":\\"Bangalore\\",\\"country\\":\\"India\\",\\"end\\":\\"2019-10-30T22:00:00Z[UTC]\\",\\"visaRequired\\":false},\\"hotel\\":{\\"address\\":{\\"city\\":\\"Bangalore\\",\\"country\\":\\"India\\",\\"street\\":\\"street\\",\\"zipCode\\":\\"12345\\"},\\"bookingNumber\\":\\"XX-012345\\",\\"name\\":\\"Perfect hotel\\",\\"phone\\":\\"09876543\\"},\\"traveller\\":{\\"address\\":{\\"city\\":\\"Bangalore\\",\\"country\\":\\"US\\",\\"street\\":\\"Bangalore\\",\\"zipCode\\":\\"560093\\"},\\"email\\":\\"ajaganat@redhat.com\\",\\"firstName\\":\\"Ajay\\",\\"lastName\\":\\"Jaganathan\\",\\"nationality\\":\\"US\\"}}",
    }
  }
>
  <Popover
    bodyContent={
      <div>
        Something went wrong
      </div>
    }
    data-ouia-component-type="error-popover"
    data-ouia-safe={true}
    footerContent={
      Array [
        <Button
          className="pf-u-mr-sm"
          id="skip-button"
          onClick={[MockFunction]}
          variant="secondary"
        >
          Skip
        </Button>,
        <Button
          className="pf-u-mr-sm"
          id="retry-button"
          onClick={[MockFunction]}
          variant="secondary"
        >
          Retry
        </Button>,
      ]
    }
    headerContent={
      <div>
        Process error
      </div>
    }
    id="e4448857-fa0c-403b-ad69-f0a353458b9d"
    position="auto"
    zIndex={300}
  >
    <Popper
      appendTo={[Function]}
      distance={25}
      enableFlip={true}
      flipBehavior={
        Array [
          "top",
          "right",
          "bottom",
          "left",
          "top",
          "right",
          "bottom",
        ]
      }
      isVisible={false}
      onDocumentClick={[Function]}
      onDocumentKeyDown={[Function]}
      onTriggerClick={[Function]}
      onTriggerEnter={[Function]}
      placement="auto"
      popper={
        <FocusTrap
          active={false}
          aria-describedby="popover-e4448857-fa0c-403b-ad69-f0a353458b9d-body"
          aria-labelledby="popover-e4448857-fa0c-403b-ad69-f0a353458b9d-header"
          aria-modal="true"
          className="pf-c-popover"
          data-ouia-component-type="error-popover"
          data-ouia-safe={true}
          focusTrapOptions={
            Object {
              "clickOutsideDeactivates": true,
              "returnFocusOnDeactivate": true,
            }
          }
          onMouseDown={[Function]}
          paused={false}
          role="dialog"
          style={
            Object {
              "maxWidth": null,
              "minWidth": null,
              "opacity": 0,
              "transition": "opacity 300ms cubic-bezier(.54, 1.5, .38, 1.11)",
            }
          }
        >
          <PopoverArrow />
          <PopoverContent>
            <PopoverCloseButton
              aria-label="Close"
              onClose={[Function]}
            />
            <PopoverHeader
              id="popover-e4448857-fa0c-403b-ad69-f0a353458b9d-header"
            >
              <div>
                Process error
              </div>
            </PopoverHeader>
            <PopoverBody
              id="popover-e4448857-fa0c-403b-ad69-f0a353458b9d-body"
            >
              <div>
                Something went wrong
              </div>
            </PopoverBody>
            <PopoverFooter
              id="popover-e4448857-fa0c-403b-ad69-f0a353458b9d-footer"
            >
              <Button
                className="pf-u-mr-sm"
                id="skip-button"
                onClick={[MockFunction]}
                variant="secondary"
              >
                Skip
              </Button>
              <Button
                className="pf-u-mr-sm"
                id="retry-button"
                onClick={[MockFunction]}
                variant="secondary"
              >
                Retry
              </Button>
            </PopoverFooter>
          </PopoverContent>
        </FocusTrap>
      }
      popperMatchesTriggerWidth={false}
      positionModifiers={
        Object {
          "bottom": "pf-m-bottom",
          "left": "pf-m-left",
          "right": "pf-m-right",
          "top": "pf-m-top",
        }
      }
      trigger={
        <Button
          isInline={true}
          variant="link"
        >
          <React.Fragment>
            <ErrorCircleOIcon
              className="pf-u-mr-sm"
              color="var(--pf-global--danger-color--100)"
              noVerticalAlign={false}
              size="sm"
            />
            Error
          </React.Fragment>
        </Button>
      }
      zIndex={300}
    >
      <FindRefWrapper
        onFoundRef={[Function]}
      >
        <Button
          isInline={true}
          variant="link"
        >
          <button
            aria-disabled={false}
            aria-label={null}
            className="pf-c-button pf-m-link pf-m-inline"
            data-ouia-component-id="OUIA-Generated-Button-link-1"
            data-ouia-component-type="PF4/Button"
            data-ouia-safe={true}
            disabled={false}
            role={null}
            type="button"
          >
            <ErrorCircleOIcon
              className="pf-u-mr-sm"
              color="var(--pf-global--danger-color--100)"
              noVerticalAlign={false}
              size="sm"
            >
              <svg
                aria-hidden={true}
                aria-labelledby={null}
                className="pf-u-mr-sm"
                fill="var(--pf-global--danger-color--100)"
                height="1em"
                role="img"
                style={
                  Object {
                    "verticalAlign": "-0.125em",
                  }
                }
                viewBox="0 0 1024 1024"
                width="1em"
              >
                <path
                  d="M409.5,319 C406.699326,316.168774 402.882413,314.575614 398.9,314.575614 C394.917587,314.575614 391.100674,316.168774 388.3,319 L319,388.3 C316.168774,391.100674 314.575614,394.917587 314.575614,398.9 C314.575614,402.882413 316.168774,406.699326 319,409.5 L421.5,512 L319,614.5 C316.168774,617.300674 314.575614,621.117587 314.575614,625.1 C314.575614,629.082413 316.168774,632.899326 319,635.7 L388.3,705 C391.100674,707.831226 394.917587,709.424386 398.9,709.424386 C402.882413,709.424386 406.699326,707.831226 409.5,705 L512,602.5 L614.5,705 C620.367618,710.877435 629.877455,710.922082 635.8,705.1 L705.1,635.8 C707.926508,632.970191 709.505822,629.128746 709.48721,625.129169 C709.468267,621.129592 707.852954,617.303145 705,614.5 L602.5,512 L705,409.5 C707.821142,406.720523 709.417879,402.93109 709.436648,398.97079 C709.455417,395.01049 707.89467,391.206092 705.1,388.4 L635.8,319 C629.932382,313.122565 620.422545,313.077918 614.5,318.9 L512,421.5 L409.5,319 Z M512,896 C300.2,896 128,723.9 128,512 C128,300.3 300.2,128 512,128 C723.8,128 896,300.2 896,512 C896,723.8 723.7,896 512,896 Z M512.1,0 C229.7,0 0,229.8 0,512 C0,794.2 229.8,1024 512.1,1024 C794.4,1024 1024,794.3 1024,512 C1024,229.7 794.4,0 512.1,0 Z"
                />
              </svg>
            </ErrorCircleOIcon>
            Error
          </button>
        </Button>
      </FindRefWrapper>
    </Popper>
  </Popover>
</ErrorPopover>
`;

exports[`Errorpopover component tests snapshot testing without error object 1`] = `
<ErrorPopover
  onRetryClick={[MockFunction]}
  onSkipClick={[MockFunction]}
  processInstanceData={
    Object {
      "addons": Array [
        "jobs-management",
        "prometheus-monitoring",
        "process-management",
      ],
      "businessKey": "T1234",
      "childProcessInstances": Array [],
      "end": "2019-10-22T05:40:44.089Z",
      "endpoint": "http://localhost:4000",
      "error": null,
      "id": "e4448857-fa0c-403b-ad69-f0a353458b9d",
      "lastUpdate": "2019-10-22T03:40:44.089Z",
      "nodes": Array [
        Object {
          "definitionId": "EndEvent_1",
          "enter": "2019-10-22T03:37:38.586Z",
          "exit": "2019-10-22T03:37:38.586Z",
          "id": "870bdda0-be04-4e59-bb0b-f9b665eaacc9",
          "name": "End Event 1",
          "nodeId": "1",
          "type": "EndNode",
        },
        Object {
          "definitionId": "UserTask_2",
          "enter": "2019-10-22T03:37:30.807Z",
          "exit": "2019-10-22T03:37:38.586Z",
          "id": "6b4a4fe9-4aab-4e8c-bb79-27b8b6b88d1f",
          "name": "Confirm travel",
          "nodeId": "2",
          "type": "HumanTaskNode",
        },
        Object {
          "definitionId": "CallActivity_1",
          "enter": "2019-10-22T03:37:30.793Z",
          "exit": "2019-10-22T03:37:30.803Z",
          "id": "dd33de7c-c39c-484a-83a8-3e1b007fce95",
          "name": "Book Hotel",
          "nodeId": "3",
          "type": "SubProcessNode",
        },
        Object {
          "definitionId": "_2140F05A-364F-40B3-BB7B-B12927065DF8",
          "enter": "2019-10-22T03:37:30.806Z",
          "exit": "2019-10-22T03:37:30.807Z",
          "id": "08c153e8-2766-4675-81f7-29943efdf411",
          "name": "Join",
          "nodeId": "4",
          "type": "Join",
        },
        Object {
          "definitionId": "CallActivity_2",
          "enter": "2019-10-22T03:37:30.803Z",
          "exit": "2019-10-22T03:37:30.806Z",
          "id": "683cf307-f082-4a8e-9c85-d5a11b13903a",
          "name": "Book Flight",
          "nodeId": "4",
          "type": "SubProcessNode",
        },
        Object {
          "definitionId": "ParallelGateway_1",
          "enter": "2019-10-22T03:37:30.792Z",
          "exit": "2019-10-22T03:37:30.803Z",
          "id": "cf057e58-4113-46c0-be13-6de42ea8377e",
          "name": "Book",
          "nodeId": "5",
          "type": "Split",
        },
        Object {
          "definitionId": "ExclusiveGateway_2",
          "enter": "2019-10-22T03:37:30.792Z",
          "exit": "2019-10-22T03:37:30.792Z",
          "id": "415a52c0-dc1f-4a93-9238-862dc8072262",
          "name": "Join",
          "nodeId": "6",
          "type": "Join",
        },
        Object {
          "definitionId": "ExclusiveGateway_1",
          "enter": "2019-10-22T03:37:30.79Z",
          "exit": "2019-10-22T03:37:30.792Z",
          "id": "52d64298-3f28-4aba-a812-dba4077c9665",
          "name": "is visa required",
          "nodeId": "7",
          "type": "Split",
        },
        Object {
          "definitionId": "BusinessRuleTask_1",
          "enter": "2019-10-22T03:37:30.755Z",
          "exit": "2019-10-22T03:37:30.79Z",
          "id": "6fdee287-08f6-49c2-af2d-2d125ba76ab7",
          "name": "Visa check",
          "nodeId": "8",
          "type": "RuleSetNode",
        },
        Object {
          "definitionId": "StartEvent_1",
          "enter": "2019-10-22T03:37:30.753Z",
          "exit": "2019-10-22T03:37:30.754Z",
          "id": "d98c1762-9d3c-4228-9ffc-bc3f423079c0",
          "name": "StartProcess",
          "nodeId": "9",
          "type": "StartNode",
        },
      ],
      "parentProcessInstance": null,
      "parentProcessInstanceId": null,
      "processId": "travels",
      "processName": "travels",
      "roles": Array [],
      "rootProcessInstanceId": null,
      "serviceUrl": "http://localhost:4000",
      "start": "2019-10-22T03:40:44.089Z",
      "state": "ERROR",
      "variables": "{\\"flight\\":{\\"arrival\\":\\"2019-10-30T22:00:00Z[UTC]\\",\\"departure\\":\\"2019-10-22T22:00:00Z[UTC]\\",\\"flightNumber\\":\\"MX555\\"},\\"trip\\":{\\"begin\\":\\"2019-10-22T22:00:00Z[UTC]\\",\\"city\\":\\"Bangalore\\",\\"country\\":\\"India\\",\\"end\\":\\"2019-10-30T22:00:00Z[UTC]\\",\\"visaRequired\\":false},\\"hotel\\":{\\"address\\":{\\"city\\":\\"Bangalore\\",\\"country\\":\\"India\\",\\"street\\":\\"street\\",\\"zipCode\\":\\"12345\\"},\\"bookingNumber\\":\\"XX-012345\\",\\"name\\":\\"Perfect hotel\\",\\"phone\\":\\"09876543\\"},\\"traveller\\":{\\"address\\":{\\"city\\":\\"Bangalore\\",\\"country\\":\\"US\\",\\"street\\":\\"Bangalore\\",\\"zipCode\\":\\"560093\\"},\\"email\\":\\"ajaganat@redhat.com\\",\\"firstName\\":\\"Ajay\\",\\"lastName\\":\\"Jaganathan\\",\\"nationality\\":\\"US\\"}}",
    }
  }
>
  <Popover
    bodyContent={
      <div>
        No error message found
      </div>
    }
    data-ouia-component-type="error-popover"
    data-ouia-safe={true}
    footerContent={
      Array [
        <Button
          className="pf-u-mr-sm"
          id="skip-button"
          onClick={[MockFunction]}
          variant="secondary"
        >
          Skip
        </Button>,
        <Button
          className="pf-u-mr-sm"
          id="retry-button"
          onClick={[MockFunction]}
          variant="secondary"
        >
          Retry
        </Button>,
      ]
    }
    headerContent={
      <div>
        Process error
      </div>
    }
    id="e4448857-fa0c-403b-ad69-f0a353458b9d"
    position="auto"
    zIndex={300}
  >
    <Popper
      appendTo={[Function]}
      distance={25}
      enableFlip={true}
      flipBehavior={
        Array [
          "top",
          "right",
          "bottom",
          "left",
          "top",
          "right",
          "bottom",
        ]
      }
      isVisible={false}
      onDocumentClick={[Function]}
      onDocumentKeyDown={[Function]}
      onTriggerClick={[Function]}
      onTriggerEnter={[Function]}
      placement="auto"
      popper={
        <FocusTrap
          active={false}
          aria-describedby="popover-e4448857-fa0c-403b-ad69-f0a353458b9d-body"
          aria-labelledby="popover-e4448857-fa0c-403b-ad69-f0a353458b9d-header"
          aria-modal="true"
          className="pf-c-popover"
          data-ouia-component-type="error-popover"
          data-ouia-safe={true}
          focusTrapOptions={
            Object {
              "clickOutsideDeactivates": true,
              "returnFocusOnDeactivate": true,
            }
          }
          onMouseDown={[Function]}
          paused={false}
          role="dialog"
          style={
            Object {
              "maxWidth": null,
              "minWidth": null,
              "opacity": 0,
              "transition": "opacity 300ms cubic-bezier(.54, 1.5, .38, 1.11)",
            }
          }
        >
          <PopoverArrow />
          <PopoverContent>
            <PopoverCloseButton
              aria-label="Close"
              onClose={[Function]}
            />
            <PopoverHeader
              id="popover-e4448857-fa0c-403b-ad69-f0a353458b9d-header"
            >
              <div>
                Process error
              </div>
            </PopoverHeader>
            <PopoverBody
              id="popover-e4448857-fa0c-403b-ad69-f0a353458b9d-body"
            >
              <div>
                No error message found
              </div>
            </PopoverBody>
            <PopoverFooter
              id="popover-e4448857-fa0c-403b-ad69-f0a353458b9d-footer"
            >
              <Button
                className="pf-u-mr-sm"
                id="skip-button"
                onClick={[MockFunction]}
                variant="secondary"
              >
                Skip
              </Button>
              <Button
                className="pf-u-mr-sm"
                id="retry-button"
                onClick={[MockFunction]}
                variant="secondary"
              >
                Retry
              </Button>
            </PopoverFooter>
          </PopoverContent>
        </FocusTrap>
      }
      popperMatchesTriggerWidth={false}
      positionModifiers={
        Object {
          "bottom": "pf-m-bottom",
          "left": "pf-m-left",
          "right": "pf-m-right",
          "top": "pf-m-top",
        }
      }
      trigger={
        <Button
          isInline={true}
          variant="link"
        >
          <React.Fragment>
            <ErrorCircleOIcon
              className="pf-u-mr-sm"
              color="var(--pf-global--danger-color--100)"
              noVerticalAlign={false}
              size="sm"
            />
            Error
          </React.Fragment>
        </Button>
      }
      zIndex={300}
    >
      <FindRefWrapper
        onFoundRef={[Function]}
      >
        <Button
          isInline={true}
          variant="link"
        >
          <button
            aria-disabled={false}
            aria-label={null}
            className="pf-c-button pf-m-link pf-m-inline"
            data-ouia-component-id="OUIA-Generated-Button-link-2"
            data-ouia-component-type="PF4/Button"
            data-ouia-safe={true}
            disabled={false}
            role={null}
            type="button"
          >
            <ErrorCircleOIcon
              className="pf-u-mr-sm"
              color="var(--pf-global--danger-color--100)"
              noVerticalAlign={false}
              size="sm"
            >
              <svg
                aria-hidden={true}
                aria-labelledby={null}
                className="pf-u-mr-sm"
                fill="var(--pf-global--danger-color--100)"
                height="1em"
                role="img"
                style={
                  Object {
                    "verticalAlign": "-0.125em",
                  }
                }
                viewBox="0 0 1024 1024"
                width="1em"
              >
                <path
                  d="M409.5,319 C406.699326,316.168774 402.882413,314.575614 398.9,314.575614 C394.917587,314.575614 391.100674,316.168774 388.3,319 L319,388.3 C316.168774,391.100674 314.575614,394.917587 314.575614,398.9 C314.575614,402.882413 316.168774,406.699326 319,409.5 L421.5,512 L319,614.5 C316.168774,617.300674 314.575614,621.117587 314.575614,625.1 C314.575614,629.082413 316.168774,632.899326 319,635.7 L388.3,705 C391.100674,707.831226 394.917587,709.424386 398.9,709.424386 C402.882413,709.424386 406.699326,707.831226 409.5,705 L512,602.5 L614.5,705 C620.367618,710.877435 629.877455,710.922082 635.8,705.1 L705.1,635.8 C707.926508,632.970191 709.505822,629.128746 709.48721,625.129169 C709.468267,621.129592 707.852954,617.303145 705,614.5 L602.5,512 L705,409.5 C707.821142,406.720523 709.417879,402.93109 709.436648,398.97079 C709.455417,395.01049 707.89467,391.206092 705.1,388.4 L635.8,319 C629.932382,313.122565 620.422545,313.077918 614.5,318.9 L512,421.5 L409.5,319 Z M512,896 C300.2,896 128,723.9 128,512 C128,300.3 300.2,128 512,128 C723.8,128 896,300.2 896,512 C896,723.8 723.7,896 512,896 Z M512.1,0 C229.7,0 0,229.8 0,512 C0,794.2 229.8,1024 512.1,1024 C794.4,1024 1024,794.3 1024,512 C1024,229.7 794.4,0 512.1,0 Z"
                />
              </svg>
            </ErrorCircleOIcon>
            Error
          </button>
        </Button>
      </FindRefWrapper>
    </Popper>
  </Popover>
</ErrorPopover>
`;
